--- a/Templates/market.html
+++ b/Templates/market.html
@@ -48,10 +48,21 @@
       <thead>
         <tr>
           <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">Barcode</th>
+          <th scope="col">Price</th>
+          <th scope="col">Options</th>
           <tbody>
+            {% for item in items %}
             <tr>
-              <td>Values for IDs</td>
+              <td>{{item.id}}</td>
+              <td>{{item.Name}}</td>
+              <td>{{item.Barcode}}</td>
+              <td>{{item.price}}$</td>
+              <td><button class="btn btn-outline btn-info">More Info</button></td>
+              <td><button class="btn btn-outline btn-success">Purchase this Product</button></td>
             </tr>
+            {% endfor %}
           </tbody>
         </tr>
       </thead>
